--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,7 +5,6 @@
 
 .posts .post {
   margin-bottom: 0.75em;
-  padding-bottom: .375em;
   border-bottom: thin solid #f3f3f3;
 }
 
